ingress/traefik/v3/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-headers-secure@kubernetescrd
   name: mydomain-ingress
   namespace: mydomain

spec:
   ingressClassName: traefik
   rules:
      - host: "mydomain.com"
        http:
           paths:
               - path: /
                 pathType: Prefix
                 backend:
                     service:
                        name: mydomain-service
                        port:
                           number: 80
   tls:
      - hosts:
            - "mydomain.com"
        secretName: mydomain.com-tls
